2010-11-04  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (vector=): Changing the user of lm:- to cl:- speeds
	up code.

2010-11-02  Rudy Neeser  <rudy.neeser@gmail.com>

	* operations.lisp (c+): Added a method so that scalar values can
	be added to a matrix (it is added to each element).
	(c-): Added a method so that scalar values can be subtracted from
	a matrix, and a method to allow a matrix to be "subtracted" from a
	scalar value.
	(c*): Added a method to allow a matrix to be multiplied by a
	scalar value.
	(c/): Added a method to allow a matrix to be divided by a scalar,
	and vice versa.

	* tests.lisp (test-dimensions): Added the missing
	&allow-other-keys argument.

	* operations.lisp (c*): Ensure that dimensions are tested properly
	when using non-square matrices.

2010-10-29  Rudy Neeser  <rudy.neeser@gmail.com>

	* matrix.lisp (make-matrix): Ensure that the initial-elements are
	converted to double-floats as needed.

2010-10-20  Rudy Neeser  <rudy.neeser@gmail.com>

	* random.lisp (make-random-vector): Ensure that the type placed
	into the created vector is a double-float.

2010-10-16  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (print-object): Have vectors print their identity in
	PRINT-OBJECT.

2010-09-16  Rudy Neeser  <rudy.neeser@gmail.com>

	* rotations.lisp (roll-by, yaw-by, pitch-by): Added functions to
	easily rotate vectors without explicitly creating rotation
	matrices.

	* operations.lisp (c-): Added the ability to subtract a constant
	to a vector, or to "subtract" a vector from a constant.

2010-09-15  Rudy Neeser  <rudy.neeser@gmail.com>

	* operations.lisp (c+): Added the ability to add a constant to a
	vector.

2010-09-14  Rudy Neeser  <rudy.neeser@gmail.com>

	* interpolate.lisp (bilinear-interpolation): Added a method to
	perform bilinear-interpolation.

2010-05-20  Rudy Neeser  <rudy.neeser@gmail.com>

	* l-math.asd (:l-math): Version bump.

	* vector.lisp (x,y,z,w): Ensure that the setf-expanders for these