@@ -1,3 +1,7 @@
+2011-06-06  Rudy Neeser  <rudy.neeser@gmail.com>
+
+	* *.lisp: Updated copyright date.
+
 2010-11-04  Rudy Neeser  <rudy.neeser@gmail.com>
 
 	* vector.lisp (vector=): Changing the user of lm:- to cl:- speeds
